--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>metas 2024</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 class="titulo">metas 2024</h1>
+    <ul class="lista">
+        <li class="item1">
+            <h2 class="titulo-meta">arrumar um emprego</h2>
+            <h3 class="importancia-meta">para ajudar em casa<
+            <h4 class="prazo-meta"> ate final de ano</h4>
+            </li>
+            <li class="item2">
+                <h2 class="titulo-meta">arrumar um emprego</h2>
+                <h3 class="importancia-meta">para ajudar em casa<
+                <h4 class="prazo-meta"> ate final de ano</h4>
+                </li>
+      </ul>
+    
+</body>
+</html>
