--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="titulo">metas 2024</h1>
-    <h1 class="link"><a href="metas.html"></a></h1>
+    <h1 class="link"><a href="metas.html">Link</a></h1>
     <ul class="lista">
         <li class="item1">
             <h2 class="titulo-meta">arrumar um emprego</h2>
