--- a/metas.html
+++ b/metas.html
@@ -13,22 +13,22 @@
         <h2 class="titulo-principal">Minhas metas para este ano<span>_</span></h2>
         <div class="conteudo">
                 <div class="botoes">
-                    <button class="botao ativo">kkkkk</button>
-                    <button class="botao ">sei la</button>
+                    <button class="botao ativo">fazer uma viagem para beto carreiro</button>
+                    <button class="botao ">pasar de ano</button>
                     <button class="botao ">Melhorar minha saúde</button>
-                    <button class="botao ">Passar em algum vestibular</button>
+                    <button class="botao ">arrumar um emprego</button>
                 </div>
        
 
         <div class="abas-textos">
            
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">kkkkk</h3>
+                <h3 class="aba-conteudo-titulo-principal">fazer uma viagem para beto carreiro</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">sei la</h3>
+                <h3 class="aba-conteudo-titulo-principal">passar de ano</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
             </div>
@@ -38,7 +38,7 @@
                 <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Passar em algum vestibular</h3>
+                <h3 class="aba-conteudo-titulo-principal">arrumar um emprego</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
             </div>
